--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="axios.TypeScript.DefinitelyTyped" version="0.7.7" targetFramework="net452" />
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="8.2.0.2" targetFramework="net452" />
   <package id="Microsoft.CrmSdk.Deployment" version="8.2.0.2" targetFramework="net452" />
   <package id="Microsoft.CrmSdk.Workflow" version="8.2.0.2" targetFramework="net452" />
@@ -10,5 +11,6 @@
   <package id="MscrmTools.Xrm.Connection" version="1.2017.5.14" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net452" />
+  <package id="xrm.TypeScript.DefinitelyTyped" version="0.1.2" targetFramework="net452" />
   <package id="XrmToolBoxPackage" version="1.2017.7.18" targetFramework="net452" />
 </packages>
